# excelTransfer

./: README.md  app.py  pyproject.toml  船厂数据清洗需求.md
templates/: index.html
uploads/: temp.xlsx
