[project]
name = "ship-import-wizard"
version = "0.1.0"
description = "船舶点表预处理演示"
requires-python = ">=3.10"
dependencies = [
    "flask",
    "pandas",
    "openpyxl",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/foo"]